# pyomftools

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
omftools/: af_compile.py  af_decompile.py  bk_compile.py  bk_decompile.py
omftools/afui/: constants.py  editor.py  main.py  state.py  utils.py
omftools/afui/ui/: mainwindow.py  mainwindow.ui
omftools/cli/: af_compile.py  af_decompile.py  anim_strings.py  bk_compile.py  bk_decompile.py  enumize_translation.py  generate_html.py  parse_string.py  sounds_decompile.py  tags.py
omftools/cli/templates/: af_index.html  altpals_index.html  base.html  bk_index.html  language_index.html  pic_index.html  sounds_index.html  trn_index.html
omftools/cli/templates/macros/: dump_table.html
omftools/pyshadowdive/: af.py  afmove.py  altpals.py  animation.py  bk.py  bkanim.py  decorators.py  language.py  palette.py  palette_mapping.py  palettes.py  pic.py  pilot.py  protos.py  sounds.py  sprite.py  string_parser.py  tournament.py  valid_tags.py
omftools/pyshadowdive/utils/: audio.py  exceptions.py  images.py  parser.py  types.py  validator.py
omftools/resources/: tags.csv
src/pyshadowdive/: af.py  animation.py  sprite.py
tests/: animation_strings.py  test_parser.py
