[tool.poetry]
name = "pyomftools"
version = "0.1.0"
package-mode = false
description = "File format library for omf2097 data files"
authors = ["Tuomas Virtanen <katajakasa@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^11.1.0"
validx = "^0.8.1"
jinja2 = "^3.1.6"
natsort = "^8.4.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
black = "^24.4.2"
types-pillow = "^9.5.0.2"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
